# rk3588DeployNoteAndCode

./: HttpManager.py  ImageProcess.py  InferenceCfg.py  InferenceSendMessage.py  InferenceStream.py  MainInference.py  README.md  RknnThreadPool.py  convert_onnx2rknn.py  convert_pt2onnx.py  detect_onnx.py  detect_pt.py  genDataset.py  inferenceSimulateInPC.py  inferenceUsingOnnxInPC.py  main_asyncio.py  main_threadpool.py  pt2onnx.py  test_main.py
cpp/: CMakeLists.txt  DetectInC.py  Detector.cpp  Detector.h  libExport.cpp  libExport.h  mainThread.cpp  postprocess.h  unit_test_detect.py  yolov8.h
cpp/rknpu2/: yolov8.cc
cpp/thirdparties/: CMakeLists.txt  stopthread.h  threadPool.h  threadPoolTest.cpp
cpp/unit_test/: CMakeLists.txt  mainCallLib.cpp
cpp/utils/: image_utils.c  image_utils.h
deconv/: data.xlsx  deconv.py  readme.md
matmul/: CMakeLists.txt  Common.hpp  Detector.cpp  Detector.h  libExport.cpp  libExport.h
modelConvert/: inferenceSimulateInPC.py  inferenceUsingOnnxInPC.py  pt2onnx.py
threadpool/: Postprocess.py  RknnThreadPool_simulator.py  RknnThreadPool_simulator_dynamic_shape.py  detect_rknn.py
threadpool_board/: LetterBox.py  RknnThreadPool.py  detect_rknn_board.py
